--- a/app/src/main/res/layout/activity_admin_clothes.xml
+++ b/app/src/main/res/layout/activity_admin_clothes.xml
@@ -11,13 +11,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/selected_item_textview"
-        android:background="@android:color/holo_blue_light"
-        android:text="아래 목록에서 선택하세요!"/>
+        android:background="@android:color/holo_orange_dark"
+        android:textAlignment="center"
+        android:text="아래 목록에서 선택하세요!"
+        android:textColor="#FFFFFF"
+        android:textSize="16dp"/>
+
 
     <ListView
         android:id="@+id/listview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp" />
+
+        />
 
 </LinearLayout>
