--- a/app/src/main/res/layout/custom_listview_item.xml
+++ b/app/src/main/res/layout/custom_listview_item.xml
@@ -1,58 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:gravity="center"
+    android:orientation="horizontal"
+    >
 
     <ImageView
-        android:layout_marginTop="250dp"
-        android:layout_marginLeft="10dp"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
         android:id="@+id/iconImage"
+        android:layout_width="170dp"
+        android:layout_height="170dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="50dp"
         android:layout_weight="1" />
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_marginLeft="10dp"
-        android:layout_weight="4">
+        android:layout_weight="4"
+        android:orientation="vertical">
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="New Text"
             android:id="@+id/name"
-            android:textSize="24dp"
-            android:textColor="#000000"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
             android:gravity="center_vertical"
-            android:layout_weight="2" />
+            android:text="New Text"
+            android:textColor="#000000"
+            android:textSize="24dp" />
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="New Text"
             android:id="@+id/code"
-            android:textSize="16dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="New Text"
             android:textColor="#666666"
-            android:layout_weight="1" />
+            android:textSize="16dp" />
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="New Text"
             android:id="@+id/bqt"
-            android:textSize="16dp"
-            android:textColor="#666666"
-            android:layout_weight="1"/>
-        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="New Text"
-            android:id="@+id/timestemp"
-            android:textSize="16dp"
             android:textColor="#666666"
-            android:layout_weight="1"/>
+            android:textSize="16dp" />
+
+        <TextView
+            android:id="@+id/timestemp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="New Text"
+            android:textColor="#666666"
+            android:textSize="16dp" />
     </LinearLayout>
 
 </LinearLayout>
